fix for time overlapping the edge of labels in some cases

--- a/src/sass/messageView.scss
+++ b/src/sass/messageView.scss
@@ -154,7 +154,7 @@
             .time,
             .status {
                 display: inline-block;
-                margin-left: .5rem;
+                margin-left: .85rem;
                 position: relative;
                 z-index: 2;
                 background: $read;
